add display swap for tasa

--- a/packages/blade/fonts.css
+++ b/packages/blade/fonts.css
@@ -4,6 +4,7 @@
   font-weight: 125 950;
   font-stretch: 75% 125%;
   font-style: normal;
+  font-display: swap;
 }
 
 /* inter-cyrillic-ext-400-normal */
