--- a/packages/blade/fonts.css
+++ b/packages/blade/fonts.css
@@ -66,10 +66,10 @@
   font-weight: 100 900;
   src: url(./fonts/inter-variable/inter-latin-extra-rzp.woff2) format('woff2-variations');
   unicode-range: U+0100-02AF, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1E00-1EFF,
-    U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+    U+2020, U+20C1-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
-/* inter-latin-wght-normal */
+/* inter-latin-rzp */
 @font-face {
   font-family: 'Inter';
   font-style: normal;
@@ -77,6 +77,6 @@
   font-weight: 100 900;
   src: url(./fonts/inter-variable/inter-latin-rzp.woff2) format('woff2-variations');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0300-0301,
-    U+0303-0304, U+0308-0309, U+0323, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
-    U+2212, U+2215, U+FEFF, U+FFFD;
+    U+0303-0304, U+0308-0309, U+0323, U+0329, U+2000-206F, U+2074, U+20A0-20AF, U+20B0-20BF, U+20C0,
+    U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
