feat(Rebranding / Typography): Update Typography Components (#1820)
* feat: add fonts file and css

* feat: add fonts to files

* feat: add fonts export

* feat: add lighter font

* add display swap for tasa

* feat: change font family tokens

* feat: add heading font family for native

* feat: change font-size token

* feat: change font for storybook

* feat: add fonts from csb

* feat: add line-height, letter-spacing tokens

* feat: change font-weight token

* feat: change font-weight tokens

* fix: remove additional styles

* feat: migrate Display, remove Title

* feat: add letter-spacing support

* feat: migrate Heading to new typescale

* feat: remove subheading variant

* feat(Code): migrate Code component to new spacings

* fix: Title instances

* feat: use inter variable font

* feat: generate razorpay's latin fonts

* fix: unicode range

* refactor: remove unused fonts

* feat: update typography tokens

* feat: update as per new tokens

* feat: add medium fontWeight in Text component

* fix: remove letterSpacing prop, fix font family of heading

* fix: storybook font size

* fix: storybook headings

--- a/packages/blade/.storybook/react/global.css
+++ b/packages/blade/.storybook/react/global.css
@@ -2,3 +2,14 @@
   /* Need this to ensure mdx stories don't break visually */
   box-sizing: border-box;
 }
+
+.sbdocs-h1,
+.sbdocs-h2,
+.sbdocs-h3,
+.sbdocs-h4,
+.sbdocs-h5,
+.sbdocs-h6 {
+  font-family: 'Tasa Orbiter', -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto,
+    Helvetica Neue, sans-serif !important;
+  font-weight: 600 !important;
+}
