feat: add zip and fix TASA name

--- a/packages/blade/.storybook/react/global.css
+++ b/packages/blade/.storybook/react/global.css
@@ -9,7 +9,7 @@
 .sbdocs-h4,
 .sbdocs-h5,
 .sbdocs-h6 {
-  font-family: 'Tasa Orbiter', -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto,
+  font-family: 'TASA Orbiter', -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto,
     Helvetica Neue, sans-serif !important;
   font-weight: 600 !important;
 }
