--- a/packages/blade/fonts.css
+++ b/packages/blade/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Tasa Orbiter';
+  font-family: 'TASA Orbiter';
   src: url('./fonts/tasa-orbiter.woff2') format('woff2-variations');
   font-weight: 125 950;
   font-stretch: 75% 125%;
