--- a/packages/blade/fonts.css
+++ b/packages/blade/fonts.css
@@ -5,6 +5,8 @@
   font-stretch: 75% 125%;
   font-style: normal;
   font-display: swap;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* inter-cyrillic-ext-wght-normal */
@@ -15,6 +17,8 @@
   font-weight: 100 900;
   src: url(./fonts/inter-variable/inter-cyrillic-extra.woff2) format('woff2-variations');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* inter-cyrillic-wght-normal */
@@ -25,6 +29,8 @@
   font-weight: 100 900;
   src: url(./fonts/inter-variable/inter-cyrillic.woff2) format('woff2-variations');
   unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* inter-greek-ext-wght-normal */
@@ -35,6 +41,8 @@
   font-weight: 100 900;
   src: url(./fonts/inter-variable/inter-greek-extra.woff2) format('woff2-variations');
   unicode-range: U+1F00-1FFF;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* inter-greek-wght-normal */
@@ -45,6 +53,8 @@
   font-weight: 100 900;
   src: url(./fonts/inter-variable/inter-greek.woff2) format('woff2-variations');
   unicode-range: U+0370-03FF;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* inter-vietnamese-wght-normal */
@@ -56,6 +66,8 @@
   src: url(./fonts/inter-variable/inter-vietnamese.woff2) format('woff2-variations');
   unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0,
     U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* inter-latin-extra-rzp: custom font which excludes common to razorpay latin symbols */
@@ -67,6 +79,8 @@
   src: url(./fonts/inter-variable/inter-latin-blade-extra.woff2) format('woff2-variations');
   unicode-range: U+0100-02AF, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1E00-1EFF,
     U+2020, U+20C1-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* inter-latin-rzp */
@@ -79,4 +93,6 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0300-0301,
     U+0303-0304, U+0308-0309, U+0323, U+0329, U+2000-206F, U+2074, U+20A0-20AF, U+20B0-20BF, U+20C0,
     U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
